Clean up some older collections idioms in ILM (#118508) (#118582)